--- a/css/j-style.less
+++ b/css/j-style.less
@@ -314,4 +314,8 @@ textarea{
   .health-profile-page {
     padding: 40px 0 0 0;
   }
+  .col-md-9, .clo-md-3{
+    width: 100%;
+    float: left;
+  }
 }
