--- a/css/j-style.css
+++ b/css/j-style.css
@@ -304,4 +304,9 @@ textarea {
   .health-profile-page {
     padding: 40px 0 0 0;
   }
+  .col-md-9,
+  .clo-md-3 {
+    width: 100%;
+    float: left;
+  }
 }
