--- a/css/j-style.less
+++ b/css/j-style.less
@@ -223,7 +223,12 @@ textarea{
     }
   }
 }
-@media screen and (max-width: 778px){
+.health-profile-page{
+  .container{
+    overflow: hidden;
+  }
+}
+@media screen and (max-width: 992px){
   .subForm {
     width: 100%;
     margin: 0 auto;
@@ -313,9 +318,9 @@ textarea{
   }
   .health-profile-page {
     padding: 40px 0 0 0;
-  }
-  .col-md-9, .clo-md-3{
-    width: 100%;
-    float: left;
+    .col-md-9, .clo-md-3{
+      width: 100%;
+      float: left;
+    }
   }
 }
