--- a/css/j-style.css
+++ b/css/j-style.css
@@ -213,7 +213,10 @@ textarea {
 .btn-link:hover:after {
   display: none;
 }
-@media screen and (max-width: 778px) {
+.health-profile-page .container {
+  overflow: hidden;
+}
+@media screen and (max-width: 992px) {
   .subForm {
     width: 100%;
     margin: 0 auto;
@@ -304,8 +307,8 @@ textarea {
   .health-profile-page {
     padding: 40px 0 0 0;
   }
-  .col-md-9,
-  .clo-md-3 {
+  .health-profile-page .col-md-9,
+  .health-profile-page .clo-md-3 {
     width: 100%;
     float: left;
   }
