--- a/css/j-style.css
+++ b/css/j-style.css
@@ -213,6 +213,9 @@ textarea {
 .btn-link:hover:after {
   display: none;
 }
+.health-profile-page.container {
+  overflow: hidden;
+}
 .health-profile-page .container {
   overflow: hidden;
 }
