--- a/css/j-style.less
+++ b/css/j-style.less
@@ -232,6 +232,15 @@ textarea{
     overflow: hidden;
   }
 }
+
+@media screen and (min-width: 992px){
+
+  .subNavigation {
+    ul {
+      display: block !important;
+    }
+  }
+}
 @media screen and (max-width: 992px){
   .subForm {
     width: 100%;
