--- a/css/j-style.css
+++ b/css/j-style.css
@@ -193,6 +193,16 @@ textarea {
 .btn-success:hover:after {
   background: #1a8b8b;
 }
+.btn-danger {
+  background: #e64b66;
+  padding: 0 15px;
+}
+.btn-danger:hover {
+  background: #e64b66;
+}
+.btn-danger:hover:after {
+  background: #e64b66;
+}
 .btn-link {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -221,6 +231,10 @@ textarea {
 }
 .health-profile-page .container {
   overflow: hidden;
+}
+.refillBtn {
+  margin-top: 15px;
+  text-transform: capitalize;
 }
 .simpleProfileInfo {
   margin-top: 15px;
@@ -435,6 +449,118 @@ textarea {
 .accBlock .btn {
   margin: 0 0 0 10px;
 }
+.refillItems {
+  margin: 25px 0;
+}
+.itemRefill {
+  border: 1px solid #dde0e4;
+  margin-bottom: 10px;
+  position: relative;
+}
+.itemRefill .remainingText {
+  position: absolute;
+  left: 50%;
+  top: -1px;
+  background: #e64b66;
+  color: #fff;
+  font: 12px/25px 'GothaProMed';
+  transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  padding: 0 15px;
+}
+.itemRefill.active {
+  border-color: #21a0a0;
+}
+.itemRefill .tableDiv {
+  height: 190px;
+}
+.itemRefill .col-md-1 {
+  background: #f1f3f5;
+  border-right: 1px solid #dde0e4;
+}
+.itemRefill .nameOrder {
+  font-size: 17px;
+  color: #26598c;
+  text-transform: capitalize;
+  margin-bottom: 6px;
+}
+.itemRefill .textOrder p {
+  margin: 0;
+  font: 12px/15px 'GothaProReg';
+  color: #040404;
+}
+.itemRefill .requiredOrder {
+  font: 10px/16px 'GothaProReg';
+  color: #e64b66;
+  margin-top: 10px;
+}
+.itemRefill .requiredOrder img {
+  height: 16px;
+  display: inline-block;
+  vertical-align: bottom;
+  line-height: 16px;
+  margin: 0 4px 0 0;
+}
+.itemRefill .form-group {
+  margin-bottom: 0;
+}
+.totalInfo {
+  width: 240px;
+}
+.totalInfo .col-md-6 {
+  height: 40px;
+  font: 15px/40px 'GothaProMed';
+  color: #040404;
+}
+.greyTotal {
+  background: #f6f8fa;
+}
+.customCheckbox {
+  display: inline-block;
+  margin: 10px 0 0 0;
+}
+.customCheckbox input {
+  display: none;
+}
+.customCheckbox input + label {
+  display: block;
+  height: 25px;
+  width: 25px;
+  position: relative;
+  font-weight: normal;
+  color: #323232;
+  cursor: pointer;
+}
+.customCheckbox input + label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #b8bcc0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.customCheckbox input:checked + label:after {
+  content: '\f00c';
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: 100%;
+  line-height: 25px;
+  font-size: 18px;
+  text-align: center;
+  font-family: 'FontAwesome';
+  color: #21a0a0;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
 @media screen and (min-width: 992px) {
   .subNavigation ul {
     display: block !important;
@@ -470,6 +596,19 @@ textarea {
     height: 50px;
     background: #1a8b8b;
     margin: 0 -15px;
+  }
+  .itemRefill {
+    padding-top: 24px;
+  }
+  .itemRefill .remainingText {
+    width: 100%;
+    text-align: center;
+  }
+  .itemRefill .tableCell > * {
+    padding: 5px 15px;
+  }
+  .itemRefill .tableCell span {
+    display: inline-block;
   }
   .navBurger {
     display: block;
