--- a/css/j-style.less
+++ b/css/j-style.less
@@ -203,6 +203,16 @@ textarea{
     }
   }
 }
+.btn-danger{
+  background: #e64b66;
+  padding: 0 15px;
+  &:hover{
+    background: #e64b66;
+    &:after{
+      background: #e64b66;
+    }
+  }
+}
 .btn-link{
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -232,6 +242,10 @@ textarea{
   .container{
     overflow: hidden;
   }
+}
+.refillBtn{
+  margin-top: 15px;
+  text-transform: capitalize;
 }
 .simpleProfileInfo{
   margin-top: 15px;
@@ -452,6 +466,122 @@ textarea{
     margin: 0 0 0 10px;
   }
 }
+.refillItems{
+  margin: 25px 0;
+}
+.itemRefill{
+  border: 1px solid #dde0e4;
+  margin-bottom: 10px;
+  position: relative;
+  .remainingText{
+    position: absolute;
+    left: 50%;
+    top: -1px;
+    background: #e64b66;
+    color: #fff;
+    font: 12px/25px 'GothaProMed';
+    transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    padding: 0 15px;
+  }
+  &.active{
+    border-color: #21a0a0;
+  }
+  .tableDiv{
+    height: 190px;
+  }
+  .col-md-1{
+    background: #f1f3f5;
+    border-right: 1px solid #dde0e4;
+  }
+  .nameOrder{
+    font-size: 17px;
+    color: #26598c;
+    text-transform: capitalize;
+    margin-bottom: 6px;
+  }
+  .textOrder{
+    p{
+      margin: 0;
+      font: 12px/15px 'GothaProReg';
+      color: #040404;
+    }
+  }
+  .requiredOrder{
+    font: 10px/16px 'GothaProReg';
+    color: #e64b66;
+    margin-top: 10px;
+    img{
+      height: 16px;
+      display: inline-block;
+      vertical-align: bottom;
+      line-height: 16px;
+      margin: 0 4px 0 0;
+    }
+  }
+  .form-group{
+    margin-bottom: 0;
+  }
+}
+.totalInfo{
+  width: 240px;
+  .col-md-6{
+    height: 40px;
+    font: 15px/40px 'GothaProMed';
+    color: #040404;
+  }
+}
+.greyTotal{
+  background: #f6f8fa;
+}
+.customCheckbox{
+  display: inline-block;
+  margin: 10px 0 0 0;
+  input{
+    display: none;
+    & + label{
+      display: block;
+      height: 25px;
+      width: 25px;
+      position: relative;
+      font-weight: normal;
+      color: #323232;
+      cursor: pointer;
+      &:before{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #b8bcc0;
+        -webkit-border-radius:3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+      }
+    }
+    &:checked + label{
+      &:after{
+        content: '\f00c';
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 0;
+        height: 100%;
+        line-height: 25px;
+        font-size: 18px;
+        text-align: center;
+        font-family: 'FontAwesome';
+        color: #21a0a0;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+      }
+    }
+  }
+}
 @media screen and (min-width: 992px){
 
   .subNavigation {
@@ -494,6 +624,22 @@ textarea{
     height: 50px;
     background: #1a8b8b;
     margin: 0 -15px;
+  }
+
+  .itemRefill {
+    padding-top: 24px;
+    .remainingText {
+      width: 100%;
+      text-align: center;
+    }
+    .tableCell{
+      & > *{
+        padding: 5px 15px;
+      }
+      span{
+        display: inline-block;
+      }
+    }
   }
   .navBurger{
     display: block;
