upload page / fix nav in account page

--- a/css/j-style.css
+++ b/css/j-style.css
@@ -92,8 +92,48 @@
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+.subNavigation ul li a:focus {
+  text-decoration: none;
+}
+.subNavigation ul li a .fa {
+  color: #9b9ea3;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
 .subNavigation ul li a:hover,
 .subNavigation ul li a.active {
+  background: #21a0a0;
+  color: #ffffff;
+}
+.subNavigation ul li a:hover .fa,
+.subNavigation ul li a.active .fa {
+  color: #ffffff;
+}
+.subNavigation ul li a.open .fa {
+  -webkit-transform: rotateZ(-180deg);
+  -moz-transform: rotateZ(-180deg);
+  -ms-transform: rotateZ(-180deg);
+  -o-transform: rotateZ(-180deg);
+  transform: rotateZ(-180deg);
+}
+.subNavigation ul li .subUl {
+  display: none;
+}
+.subNavigation ul li .subUl li {
+  float: left;
+  margin-bottom: 1px;
+}
+.subNavigation ul li .subUl li a {
+  background: #d8dadd;
+  font: 15px/20px 'GothaProReg';
+  color: #33333a;
+  padding: 13px 13px 13px 33px;
+}
+.subNavigation ul li .subUl li a:hover,
+.subNavigation ul li .subUl li a.active {
   background: #21a0a0;
   color: #ffffff;
 }
@@ -104,6 +144,8 @@
 }
 .customHR {
   margin: 15px 0;
+  width: 100%;
+  float: left;
 }
 .form-group label {
   font: 14px/20px 'GothaProMed';
@@ -234,7 +276,6 @@ textarea {
 }
 .refillBtn {
   margin-top: 15px;
-  text-transform: capitalize;
 }
 .simpleProfileInfo {
   margin-top: 15px;
@@ -451,6 +492,8 @@ textarea {
 }
 .refillItems {
   margin: 25px 0;
+  float: left;
+  width: 100%;
 }
 .itemRefill {
   border: 1px solid #dde0e4;
@@ -505,6 +548,9 @@ textarea {
 }
 .itemRefill .form-group {
   margin-bottom: 0;
+}
+.smallRefill .itemRefill .tableDiv {
+  height: 120px;
 }
 .totalInfo {
   width: 240px;
@@ -561,8 +607,83 @@ textarea {
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
+.fileUploader {
+  background: #f5f7f9;
+  border: 1px solid #dddddd;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  float: left;
+  width: 100%;
+  height: 180px;
+}
+.fileUploader span {
+  color: #323232;
+  font: 14px/23px 'GothaProReg';
+  margin: 0 15px;
+}
+.fileUploader .btnGreen {
+  background: #858c97;
+  padding: 0 15px;
+}
+.fileUploader .btnGreen:hover {
+  background: #858c97;
+}
+.fileUploader .btnGreen:hover:after {
+  background: #858c97;
+}
+.prescriptionBLock {
+  border: 2px solid #dddddd;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  float: left;
+  width: 100%;
+  margin-bottom: 30px;
+  padding: 15px;
+}
+.prescriptionBLock .tableDiv .tableCell:nth-child(1) {
+  width: 90px;
+}
+.prescriptionBLock .fileUploader {
+  margin-top: 20px;
+  height: 80px;
+}
+.profileTitle {
+  font: 15px/18px 'GothaProMed';
+  color: #4a4a4a;
+  margin: 20px 0 10px;
+  text-align: center;
+}
+.profileTitle.textLeft {
+  text-align: left;
+}
+.profileSubTitle {
+  font: 17px/20px 'GothaProMed';
+  color: #21a0a0;
+  text-align: center;
+}
+.files {
+  margin: 15px 0;
+}
+.files .itemFile {
+  font: 14px/17px 'GothaProReg';
+  color: #4a4a4a;
+}
+.files .itemFile strong {
+  font-weight: normal;
+  font-family: 'GothaProBold';
+}
+.files .itemFile .fa {
+  color: #21a0a0;
+  margin: 0 6px 0 0;
+  display: inline-block;
+  vertical-align: baseline;
+  line-height: 17px;
+}
 @media screen and (min-width: 992px) {
-  .subNavigation ul {
+  .subNavigation > ul {
     display: block !important;
   }
 }
@@ -578,6 +699,33 @@ textarea {
   }
   .tableCell {
     display: table-row;
+  }
+  .prescriptionBLock img {
+    display: block;
+    margin: 15px auto 20px;
+  }
+  .fileUploader {
+    height: auto !important;
+  }
+  .fileUploader span {
+    display: block;
+    text-align: center;
+  }
+  .fileUploader img {
+    display: block;
+    margin: 15px auto 20px;
+  }
+  .fileUploader .btnGreen {
+    background: #858c97;
+    padding: 0 15px;
+    display: block;
+    margin: 15px auto 20px;
+  }
+  .fileUploader .btnGreen:hover {
+    background: #858c97;
+  }
+  .fileUploader .btnGreen:hover:after {
+    background: #858c97;
   }
   .orderTable .tableCell {
     display: table-cell;
