--- a/css/styles.less
+++ b/css/styles.less
@@ -151,6 +151,89 @@
     }
   }
 }
+
+/* autorization */
+
+.authoriseTitle{
+  color: #21a0a0;
+  font: 20px/20px 'GothaProMed';
+  float: left;
+  width: 100%;
+  margin: 15px 0 25px;
+  text-align: center;
+}
+.authoriseIco{
+  margin: 0 auto;
+  display: block;
+  max-width: 95px;
+}
+.authoriseSubTitle{
+  font: 18px/20px 'GothaProMed';
+  color: #26598c;
+  float: left;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+  span{
+    font: 13px/18px 'GothaProMed';
+    color: #33333a;
+    float: left;
+    width: 100%;
+  }
+}
+.authoriseAcc{
+  .accItem{
+    .accTitle{
+      background: #21a0a0;
+      border: none;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+      font: 17px/20px 'GothaProMed';
+      color: #ffffff;
+      position: relative;
+      padding: 15px 0 15px 50px;
+      text-transform: capitalize;
+      img{
+        position: absolute;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+      }
+      &:after{
+        color: #ffffff;
+      }
+    }
+    .accBlock{
+      padding: 10px;
+      border: 1px dashed #cbced2;
+      border-top: none;
+    }
+  }
+}
+.files{
+  .itemFile{
+    .fa-close{
+      color: #c3252f;
+      width: 14px;
+    }
+  }
+}
+.profileGreenTitle{
+  color: #21a0a0;
+  font: 14px/18px 'GothaProMed';
+  margin-bottom: 20px;
+}
+.profileTitle{
+  a{
+    color: #21a0a0;
+  }
+}
+/* authorization */
+
 @media screen and (max-width:  992px){
   .registerAcc .accTitle {
     font: 14px/34px 'GothaProMed';
