--- a/css/styles.less
+++ b/css/styles.less
@@ -234,6 +234,18 @@
 }
 /* authorization */
 
+/* COntanct */
+
+.contactFormTitle{
+  .tableCell{
+    padding: 0 10px;
+  }
+}
+.contactForm{
+  margin-top: 30px;
+}
+/* COntanct */
+
 @media screen and (max-width:  992px){
   .registerAcc .accTitle {
     font: 14px/34px 'GothaProMed';
