--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,14 @@
   color: #21a0a0;
 }
 /* authorization */
+/* COntanct */
+.contactFormTitle .tableCell {
+  padding: 0 10px;
+}
+.contactForm {
+  margin-top: 30px;
+}
+/* COntanct */
 @media screen and (max-width: 992px) {
   .registerAcc .accTitle {
     font: 14px/34px 'GothaProMed';
