--- a/css/styles.less
+++ b/css/styles.less
@@ -246,6 +246,63 @@
 }
 /* COntanct */
 
+/* Modal */
+
+.modal-dialog{
+  height: 100%;
+  margin: 0;
+  display: flex;
+  width: 100%;
+  .modal-content{
+    margin: auto;
+    overflow: hidden;
+    .modal-header{
+      background: #f6f8fa;
+      border-bottom: 1px solid #dddddd;
+      h4{
+        font: 18px/18px 'GothaProBold';
+        color: #26598c;
+        text-align: center;
+        text-transform: uppercase;
+      }
+    }
+    .modal-body{
+      padding: 30px;
+      overflow: hidden;
+    }
+    .modal-footer{
+      border-top: none;
+      padding-top: 0;
+    }
+  }
+}
+
+/* Modal */
+
+/* Login Modal */
+
+.loginModal{
+  .modal-content{
+    width: 500px;
+    .modalLink{
+      font: 15px/25px 'GothaProReg';
+      color: #1181e1;
+      text-decoration: underline;
+      display: inline-block;
+    }
+    .customCheckbox{
+      margin: 0;
+    }
+    .modal-footer{
+      .modalLink{
+        margin-top: 10px;
+      }
+    }
+  }
+}
+
+/* Login Modal */
+
 @media screen and (max-width:  992px){
   .registerAcc .accTitle {
     font: 14px/34px 'GothaProMed';
