--- a/css/styles.less
+++ b/css/styles.less
@@ -244,6 +244,71 @@
 .contactForm{
   margin-top: 30px;
 }
+.noMarginLabel{
+  margin: 0;
+}
+.contactBlock{
+  background: #f5f7f8;
+  padding: 15px 0;
+  .contactItem{
+    border-bottom: 1px solid #dddddd;
+    margin-bottom: 15px;
+    &.noBorder{
+      border-bottom: none;
+      margin: 0;
+    }
+    .contactIco{
+      text-align: center;
+      margin-bottom: 10px;
+      img{}
+      display: inline-block;
+    }
+    .contactTitle{
+      font: 19px/19px 'GothaProMed';
+      color: #26598c;
+      margin-bottom: 15px;
+      text-transform: uppercase;
+      text-align: center;
+    }
+  }
+}
+.emailText{
+  padding-bottom: 15px;
+}
+.contactText{
+  font: 14px/17px 'GothaProReg';
+  color: #323232;
+  margin-top: 10px;
+  a{
+    color: #26598c;
+    font-size: 11px;
+    text-decoration: underline;
+  }
+  strong{
+    font-weight: normal;
+    font-family: 'GothaProMed';
+    a{
+      font: 14px/17px 'GothaProMed';
+      color: #323232;
+      font-weight: normal;
+      text-decoration: none;
+    }
+  }
+  p{
+    min-height: 17px;
+    display: inline-block;
+  }
+  span{
+    font: 16px/19px 'GothaProMed';
+    color: #26598c;
+  }
+  i{
+    color: #8c8c8c;
+    font-size: 11px;
+    font-style: normal;
+    margin-top: 5px;
+  }
+}
 /* COntanct */
 
 /* Modal */
