--- a/css/styles.less
+++ b/css/styles.less
@@ -522,6 +522,105 @@
 
 /* Pay page */
 
+
+/* Checkout page */
+
+.checkoutHeader{
+  height: 90px;
+  .container{
+    height: 100%;
+    border-bottom: 1px solid #dddfe1;
+  }
+  .call-block{
+    font-size: 22px;
+    text-transform: uppercase;
+  }
+}
+.secureTitle{
+  font: 26px/53px 'GothaProBold';
+  color: #21a0a0;
+  text-transform: uppercase;
+  img{
+    float: left;
+    margin: 0 10px 0 0;
+  }
+}
+.customerTitle{
+  margin: 25px 0 40px;
+  float: left;
+  width: 100%;
+  border: 1px solid #dddfe1;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background: #f6f8fa;
+  padding: 10px;
+  font: 16px/25px 'GothaProMed';
+  color: #4a4b4d;
+  a{
+    color: #26598c;
+    text-decoration: underline;
+  }
+  .fa{
+    color: #26598c;
+    font-size: 25px;
+    line-height: 25px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+.customerNewTitle{
+  font: 19px/19px 'GothaProBold';
+  color: #26598c;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+.formCustomerTitle{
+  color: #33333a;
+  font: 17px/17px 'GothaProMed';
+  margin: 20px 0 25px;
+}
+.checkSubmit{
+  margin-top: 30px;
+  .btn{
+    margin-bottom: 15px;
+  }
+}
+.checkoutPay{
+  margin-top: 0;
+}
+.customerBlock{
+  font: 14px/17px 'GothaProReg';
+  color: #323232;
+  margin-bottom: 35px;
+  strong{
+    font-weight: normal;
+    font-family: 'GothaProBold';
+  }
+  span{
+    color: #26598c;
+    display: inline-block;
+    margin: 0 10px;
+  }
+  .marginBottom{
+    margin-bottom: 25px;
+  }
+  a{
+    font-family: 'GothaProBold';
+  }
+  .name{
+    font: 19px/19px 'GothaProMed';
+    color: #26598c;
+    margin: 30px 0 15px;
+  }
+  & + .btn{
+    margin-bottom: 10px;
+  }
+}
+
+
+/* Checkout page */
+
 @media screen and (max-width:  992px){
   .registerAcc .accTitle {
     font: 14px/34px 'GothaProMed';
