--- a/css/styles.less
+++ b/css/styles.less
@@ -617,7 +617,58 @@
     margin-bottom: 10px;
   }
 }
-
+.newCheckoutItem{
+  padding: 15px;
+  border: 1px dashed #dddddd;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  img{
+    height: 44px;
+  }
+  .paySubTitle{
+    min-height: 32px;
+  }
+  .btn{
+    padding: 0 45px;
+    position: relative;
+    img{
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      -o-transform: translateY(-50%);
+      height: auto;
+    }
+  }
+}
+.simpleCheckoutText{
+  font: 14px/14px 'GothaProReg';
+  color: #323232;
+  margin: 35px 0 25px;
+}
+.thanksLine{
+  background: #f2f5f7;
+  padding: 15px;
+  font: 19px/19px 'GothaProBold';
+  color: #21a0a0;
+  text-align: center;
+}
+.noBorder{
+  border: none !important;
+}
+@media screen and (max-width:  992px) {
+  .newCheckoutItem .btn {
+    position: relative;
+    white-space: normal;
+    height: auto;
+    line-height: 18px;
+    padding: 15px 45px;
+    white-space: normal;
+  }
+}
 
 /* Checkout page */
 
