--- a/css/styles.less
+++ b/css/styles.less
@@ -672,6 +672,156 @@
 
 /* Checkout page */
 
+/* Checkout modal */
+
+
+.photoModal{
+  .modal-dialog {
+    .modal-content {
+      width: 900px;
+      .modal-header {
+        border-bottom: 1px solid #dddfe1;
+        background: transparent;
+        float: left;
+        width: 100%;
+        .modal-title{
+          text-transform: capitalize;
+        }
+      }
+      .modal-body{
+        float: left;
+        width: 100%;
+        padding: 0 0 20px 0;
+        .photoTitle{
+          margin-top: 15px;
+          margin-bottom: 15px;
+        }
+        .camera{
+          width: 75% !important;
+          float: left;
+        }
+        .images{
+          max-height: 400px;
+          overflow: auto;
+          width: 25% !important;
+          float: left;
+          .itemCheck{
+            margin-bottom: 10px;
+            float: left;
+            width: 100%;
+          }
+          .image{
+            height: 80px;
+            width: 100%;
+            float: left;
+          }
+          .check{
+            height: 30px;
+            width: 100%;
+            float: left;
+            input{
+              display: none;
+              & + label{
+                width: 20px;
+                height: 20px;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                border-radius: 50%;
+                background: #cdcccc;
+                text-align: center;
+                color: #ffffff;
+                margin: 5px auto 5px;
+                display: block;
+                cursor: pointer;
+                .fa{
+                  line-height: 20px;
+                  font-size: 12px;
+                }
+              }
+              &:checked + label{
+                background: #21a0a0;
+              }
+            }
+          }
+        }
+        .cameraBLock{
+          height: 350px;
+          margin-bottom: 15px;
+        }
+      }
+      .modal-footer{
+        background: #f0f0f0;
+        float: left;
+        width: 100%;
+        padding: 15px;
+      }
+    }
+  }
+}
+
+.track3 {
+  width: 7px;
+  background: rgba(0, 0, 0, 0.10);
+  margin-right: 2px;
+  border-radius: 10px;
+  -webkit-transition: background 250ms linear;
+  transition: background 250ms linear;
+}
+
+.track3:hover,
+.track3.dragging {
+  background: #d9d9d9;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.handle3 {
+  width: 7px;
+  right: 0;
+  background: #999;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 7px;
+  -webkit-transition: width 250ms;
+  transition: width 250ms;
+}
+
+.track3:hover .handle3,
+.track3.dragging .handle3 {
+  width: 7px;
+}
+
+
+@media screen and (max-width:  992px) {
+  .photoModal {
+    .modal-dialog {
+      .modal-content {
+        width: 100%;
+        .modal-header {
+          .modal-title {
+            text-transform: capitalize;
+          }
+        }
+        .modal-body {
+          height: 200px;
+          overflow: auto;
+          .camera {
+            width: 70% !important;
+            float: left;
+          }
+          .images{
+            max-height: 200px;
+            width: 30% !important;
+          }
+          .cameraBLock{
+            height: 200px;
+          }
+        }
+      }
+    }
+  }
+}
+/* Checkout modal */
+
+
 @media screen and (max-width:  992px){
   .registerAcc .accTitle {
     font: 14px/34px 'GothaProMed';
