--- a/css/final.css
+++ b/css/final.css
@@ -13,3 +13,77 @@
   text-decoration: underline;
   font-family: 'GothaProReg';
 }
+/* Subscribe page */
+.subscribeItems .subscribeItem {
+  font: 16px/20px 'GothaProMed';
+  color: #494948;
+  padding: 15px;
+  background: #f1f3f5;
+  margin-bottom: 10px;
+}
+.checkToggle {
+  float: left;
+}
+.checkToggle input {
+  display: none;
+}
+.checkToggle input + label {
+  width: 40px;
+  height: 20px;
+  float: left;
+  display: block;
+  margin: 0 7px 0 0;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background: #9c9c9c;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.checkToggle input + label:after {
+  content: '';
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  height: 16px;
+  width: 16px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  background: #ffffff;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.checkToggle input + label + span {
+  font: 15px/20px 'GothaProMed';
+  color: #494948;
+  float: left;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.checkToggle input:checked + label {
+  background: #21a0a0;
+}
+.checkToggle input:checked + label:after {
+  left: 22px;
+}
+.checkToggle input:checked + label + span {
+  color: #21a0a0;
+}
+@media screen and (max-width: 992px) {
+  .checkToggle {
+    margin-top: 10px;
+  }
+}
+/* Subscribe page */
