--- a/css/final.css
+++ b/css/final.css
@@ -221,3 +221,14 @@
   display: block;
   text-align: center;
 }
+/* Landing */
+.landingForm {
+  border: 1px solid #21a0a0;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  width: 100%;
+  float: left;
+  padding: 60px 60px 20px;
+  margin-bottom: 25px;
+}
