--- a/css/final.less
+++ b/css/final.less
@@ -251,3 +251,176 @@
   padding: 60px 60px 20px;
   margin-bottom: 25px;
 }
+
+/* Landing */
+
+/* pet page */
+
+.petMainBlock{
+  width: 100%;
+  background: #e9f0f9;
+  padding: 25px 0;
+}
+.petTitle{
+  color: #26598c;
+  font: 34px/34px 'GothaProBold';
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+.petSearch{
+  margin-top: -80px;
+}
+.letterFilter{
+  text-align: center;
+  float: left;
+  width: 100%;
+  margin-bottom: 30px;
+  .item{
+    display: inline-block;
+    text-align: center;
+    height: 30px;
+    width: 30px;
+    font: 15px/28px 'GothaProReg';
+    color: #323232;
+    border: 1px solid #dddfe1;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    background: #f6f8fa;
+    margin: 0 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+}
+.petBlock{
+  .orderItem{
+    .orderBody{
+      border: 1px solid #dddfe1;
+      border-top: none;
+      padding: 20px 20px 0 20px;
+      .petItemSearch{
+        width: 32%;
+        margin: 0 0 20px 2%;
+        float: left;
+        padding: 10px;
+        border: 2px solid #dddfe1;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        font: 15px/15px 'GothaProReg';
+        color: #343a41;
+        overflow: hidden;
+        strong{
+          font-weight: normal;
+          font-family: 'GothaProBold';
+        }
+        &:nth-child(3n+1){
+          margin: 0 0 20px 0;
+        }
+        .customHR{
+          margin: 0;
+        }
+        .contentSearch{
+          height: 45px;
+          position: relative;
+          float: left;
+          width: 100%;
+          div{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 100%;
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+          }
+        }
+        .titleSearch{
+          height: 80px;
+          position: relative;
+          float: left;
+          width: 100%;
+          span{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 90%;
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            font: 17px/20px 'GothaProBold';
+            color: #21a0a0;
+          }
+        }
+      }
+    }
+    .accBlock{
+      padding: 25px;
+      ul{
+        li{
+          float: left;
+          width: 50%;
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
+}
+.promoBlock{
+  width: 100%;
+  float: left;
+  margin-bottom: 40px;
+  .promoHeader{
+    height: 75px;
+    position: relative;
+    background: #f0f3f5;
+    float: left;
+    width: 100%;
+    img{
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      max-width: 90%;
+      max-height: 90%;
+      display: block;
+    }
+  }
+  .promoContent{
+    padding: 30px 15px;
+    float: left;
+    width: 100%;
+    &.blueBG{
+      background: #26598c;
+    }
+    &.greenBG{
+      background: #21a0a0;
+    }
+    img{
+      max-width: 90%;
+    }
+    font: 18px/20px 'GothaProBold';
+    color: #ffffff;
+    a{
+      display: block;
+      height: 34px;
+      font: 14px/32px 'GothaProReg';
+      text-align: center;
+      border: 1px solid #ffffff;
+      color: #ffffff;
+      margin-top: 10px;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+    }
+  }
+}
+/* pet page */
