--- a/css/final.css
+++ b/css/final.css
@@ -396,3 +396,37 @@
   border-radius: 4px;
 }
 /* pet page */
+.petSearch {
+  position: relative;
+}
+.petSearch .searchInput {
+  width: 100%;
+  height: 50px;
+  border: 2px solid #bcc0c3;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  font: 17px 'GothaProReg';
+  padding: 0 175px 0 15px;
+}
+.petSearch .btnSearch {
+  width: 160px;
+  height: 100%;
+  position: absolute;
+  background: #26598c;
+  -webkit-border-radius: 0 4px 4px 0;
+  -moz-border-radius: 0 4px 4px 0;
+  border-radius: 0 4px 4px 0;
+  border: none;
+  right: 0;
+  top: 0;
+  color: #ffffff;
+  font-size: 18px;
+  font-family: 'GothaProMed';
+  text-transform: uppercase;
+}
+.petSearch .btnSearch span {
+  color: #204a75;
+  font-family: 'GothaProReg';
+  margin: 0 10px;
+}
